@@ -343,6 +343,10 @@
 
       \item \code{stars()} gains a \code{col.lines} argument, thanks to
       Dustin Sallings. (Wish of \PR{14657}.)
+
+      \item New function \code{regmatches} for extracting matched or
+      non-matched substrings from match data obtained by \code{regexpr}
+      and \code{gregexpr}.
     }
   }
 
